added team activity link

--- a/w5/index.html
+++ b/w5/index.html
@@ -95,8 +95,8 @@ try {
                 </figure>-->
             </article>
             <article>
-                <h3>Team Activity: TicTacToe</h3>
-                <p><a href="team_activity" class="minimal-margin-padding">Go to Sample Code</a></p>
+                <h3>Team Activity: Hikes</h3>
+                <p><a href="team_activity/" class="minimal-margin-padding">Go to Sample Code</a></p>
             </article>
         </section>
     </main>
