--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="w2">&nbsp;&nbsp;&nbsp;Week 2</a></li>
             <li><a href="w3">&nbsp;&nbsp;&nbsp;Week 3</a></li>
             <li><a href="w4">&nbsp;&nbsp;&nbsp;Week 4</a></li>
+            <li><a href="w5">&nbsp;&nbsp;&nbsp;Week 5</a></li>
         </ul>
     </nav>
     <header></header>
