--- a/w5/team_activity/index.html
+++ b/w5/team_activity/index.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="../index.html">&lt;&lt; Go Back</a></li>
+        </ul>
+    </nav>
     <main>
         <section>
             <h1>Great Hikes</h1>
