Added task count.

--- a/w5/todo_challenge/mvc/index.html
+++ b/w5/todo_challenge/mvc/index.html
@@ -19,7 +19,7 @@
         <div>
             <ul id="todoList"></ul>
             <div>
-                <span>tasks left</span>
+                <span id="todoCount">tasks left</span>
                 <button>All</button>
                 <button>Active</button>
                 <button>Completed</button>
