Updated task count by filter

--- a/w5/todo_challenge/mvc/index.html
+++ b/w5/todo_challenge/mvc/index.html
@@ -20,9 +20,9 @@
             <ul id="todoList"></ul>
             <div>
                 <span id="todoCount">tasks left</span>
-                <button>All</button>
-                <button>Active</button>
-                <button>Completed</button>
+                <button id="filterAllTodos">All</button>
+                <button id="filterActiveTodos">Active</button>
+                <button id="filterCompletedTodos">Completed</button>
             </div>
         </div>
         <div>
