--- a/w2/index.html
+++ b/w2/index.html
@@ -19,6 +19,7 @@
             <li><a href="../w3/">&nbsp;&nbsp;&nbsp;Week 3</a></li>
             <li><a href="../w4/">&nbsp;&nbsp;&nbsp;Week 4</a></li>
             <li><a href="../w5/">&nbsp;&nbsp;&nbsp;Week 5</a></li>
+            <li><a href="../w6/">&nbsp;&nbsp;&nbsp;Challenge One: ToDo</a></li>
         </ul>
     </nav>
     <header></header>
