--- a/w5/index.html
+++ b/w5/index.html
@@ -19,6 +19,7 @@
             <li><a href="../w3/index.html">&nbsp;&nbsp;&nbsp;Week 3</a></li>
             <li><a href="../w4/index.html">&nbsp;&nbsp;&nbsp;Week 4</a></li>
             <li><a href="index.html">&nbsp;&nbsp;&nbsp;Week 5</a></li>
+            <li><a href="../w6/">&nbsp;&nbsp;&nbsp;Challenge One: ToDo</a></li>
         </ul>
     </nav>
     <header></header>
