Update link to toggle menu from w6

--- a/w6/index.html
+++ b/w6/index.html
@@ -40,7 +40,7 @@
         </div>
     </main>
     <script src="app.js" type="module"></script>
-    <script src="../../../static/js/toggleMenu.js"></script>
+    <script src="../static/js/toggleMenu.js"></script>
 </body>
 
 </html>
