Added back button to code example

--- a/w7/team_activity/mvc/index.html
+++ b/w7/team_activity/mvc/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Hikes with Comments</title>
+    <link rel="stylesheet" href="../../../static/css/style.css">
     <style>
         body {
             margin: 0;
@@ -66,6 +67,11 @@
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="../../index.html">&lt;&lt; Go Back</a></li>
+        </ul>
+    </nav>
     <main>
         <h1>Great Hikes</h1>
         <ul id="hikeList"></ul>
