--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href="w4">&nbsp;&nbsp;&nbsp;Week 4</a></li>
             <li><a href="w5">&nbsp;&nbsp;&nbsp;Week 5</a></li>
             <li><a href="w6">&nbsp;&nbsp;&nbsp;Challenge One: ToDo</a></li>
+            <li><a href="w7">&nbsp;&nbsp;&nbsp;Week 7</a></li>
         </ul>
     </nav>
     <header></header>
