--- a/w6/index.html
+++ b/w6/index.html
@@ -1,68 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Challenge One: ToDo</title>
-    <link rel="stylesheet" href="../static/css/style.css" />
-    <link rel="stylesheet" href="../static/css/todos.css" />
-  </head>
 
-  <body>
-    <nav>
-      <ul id="menuLink">
-        <li>
-          <a href="#" id="menu">
-            <strong>&equiv; Menu</strong>
-          </a>
-        </li>
-        <li>
-          <a href="../index.html">&nbsp;&nbsp;&nbsp;Home</a>
-        </li>
-        <li>
-          <a href="../w1/">&nbsp;&nbsp;&nbsp;Week 1</a>
-        </li>
-        <li>
-          <a href="../w2/">&nbsp;&nbsp;&nbsp;Week 2</a>
-        </li>
-        <li>
-          <a href="../w3/">&nbsp;&nbsp;&nbsp;Week 3</a>
-        </li>
-        <li>
-          <a href="../w4/">&nbsp;&nbsp;&nbsp;Week 4</a>
-        </li>
-        <li>
-          <a href="../w5/">&nbsp;&nbsp;&nbsp;Week 5</a>
-        </li>
-        <li>
-          <a href="index.html">&nbsp;&nbsp;&nbsp;Challenge One: ToDo</a>
-        </li>
-      </ul>
-    </nav>
-    <main>
-      <h1>Todo List</h1>
-      <div>
-        <ul id="todoList" class="todo-list"></ul>
-        <div class="todo-filter">
-          <span id="todoCount" class="todo-task-left font-small"
-            >tasks left</span
-          >
-          <button id="filterAllTodos" class="btn todo-filter-btn">All</button>
-          <button id="filterActiveTodos" class="btn todo-filter-btn">
-            Active
-          </button>
-          <button id="filterCompletedTodos" class="btn todo-filter-btn">
-            Completed
-          </button>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Challenge One: ToDo</title>
+  <link rel="stylesheet" href="../static/css/style.css" />
+  <link rel="stylesheet" href="../static/css/todos.css" />
+</head>
+
+<body>
+  <nav>
+    <ul id="menuLink">
+      <li>
+        <a href="#" id="menu">
+          <strong>&equiv; Menu</strong>
+        </a>
+      </li>
+      <li>
+        <a href="../index.html">&nbsp;&nbsp;&nbsp;Home</a>
+      </li>
+      <li>
+        <a href="../w1/">&nbsp;&nbsp;&nbsp;Week 1</a>
+      </li>
+      <li>
+        <a href="../w2/">&nbsp;&nbsp;&nbsp;Week 2</a>
+      </li>
+      <li>
+        <a href="../w3/">&nbsp;&nbsp;&nbsp;Week 3</a>
+      </li>
+      <li>
+        <a href="../w4/">&nbsp;&nbsp;&nbsp;Week 4</a>
+      </li>
+      <li>
+        <a href="../w5/">&nbsp;&nbsp;&nbsp;Week 5</a>
+      </li>
+      <li>
+        <a href="index.html">&nbsp;&nbsp;&nbsp;Challenge One: ToDo</a>
+      </li>
+      <li><a href="../w7/">&nbsp;&nbsp;&nbsp;Week 7</a></li>
+    </ul>
+  </nav>
+  <main>
+    <h1>Todo List</h1>
+    <div>
+      <ul id="todoList" class="todo-list"></ul>
+      <div class="todo-filter">
+        <span id="todoCount" class="todo-task-left font-small">tasks left</span>
+        <button id="filterAllTodos" class="btn todo-filter-btn">All</button>
+        <button id="filterActiveTodos" class="btn todo-filter-btn">
+          Active
+        </button>
+        <button id="filterCompletedTodos" class="btn todo-filter-btn">
+          Completed
+        </button>
       </div>
-      <div class="todo-control">
-        <input type="text" id="todoContent" class="todo-create" />
-        <button id="addTodo" class="btn todo-btn">+</button>
-      </div>
-    </main>
-    <script src="app.js" type="module"></script>
-    <script src="../static/js/toggleMenu.js"></script>
-  </body>
+    </div>
+    <div class="todo-control">
+      <input type="text" id="todoContent" class="todo-create" />
+      <button id="addTodo" class="btn todo-btn">+</button>
+    </div>
+  </main>
+  <script src="app.js" type="module"></script>
+  <script src="../static/js/toggleMenu.js"></script>
+</body>
+
 </html>
