--- a/w8/team_activity/index.html
+++ b/w8/team_activity/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Starwars</title>
     <link rel="stylesheet" href="../../static/css/style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -15,12 +16,12 @@
             <li><a href="../index.html">&lt;&lt; Go Back</a></li>
         </ul>
     </nav>
-    <main>
+    <main class="people">
         <section>
             <h1>People</h1>
             <ul id="people-list"></ul>
-            <div id="pages"></div>
-            <div id="controls">
+            <div class="pages" id="pages"></div>
+            <div class="controls" id="controls">
             </div>
         </section>
     </main>
