--- a/w8/team_activity/index.html
+++ b/w8/team_activity/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Starwars</title>
+    <title>SWAPI: Star Wars API</title>
     <link rel="stylesheet" href="../../static/css/style.css">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -18,7 +18,7 @@
     </nav>
     <main class="people">
         <section>
-            <h1>People</h1>
+            <h1>Star Wars Characters</h1>
             <ul id="people-list"></ul>
             <div class="pages" id="pages"></div>
             <div class="controls" id="controls">
