--- a/w6/index.html
+++ b/w6/index.html
@@ -40,6 +40,7 @@
         <a href="index.html">&nbsp;&nbsp;&nbsp;Challenge One: ToDo</a>
       </li>
       <li><a href="../w7/">&nbsp;&nbsp;&nbsp;Week 7</a></li>
+      <li><a href="../w8/">&nbsp;&nbsp;&nbsp;Week 8</a></li>
     </ul>
   </nav>
   <main>
