--- a/w5/index.html
+++ b/w5/index.html
@@ -21,6 +21,7 @@
             <li><a href="index.html">&nbsp;&nbsp;&nbsp;Week 5</a></li>
             <li><a href="../w6/">&nbsp;&nbsp;&nbsp;Challenge One: ToDo</a></li>
             <li><a href="../w7/">&nbsp;&nbsp;&nbsp;Week 7</a></li>
+            <li><a href="../w8/">&nbsp;&nbsp;&nbsp;Week 8</a></li>
         </ul>
     </nav>
     <header></header>
