--- a/w8/index.html
+++ b/w8/index.html
@@ -2,38 +2,129 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../static/css/style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="../static/css/style.css" />
     <title>Week 8 | Notes</title>
+
+    <style>
+        .base {
+            background-color: #ffffff;
+            color: #272727;
+            display: flex;
+            width: 50%;
+            height: 50px;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .translate {
+            transform: translate(45px, 0);
+        }
+
+        .scale {
+            transform: scaleY(1.5);
+        }
+
+        .rotate {
+            transform: rotate(-45deg);
+        }
+
+        .skew {
+            transform: skew(15deg, 15deg);
+        }
+
+        #transition {
+            transition: width 2s;
+        }
+
+        .transition {
+            width: 100%;
+        }
+
+        .animation {
+            background-color: #FFF;
+            height: 50px;
+            position: relative;
+            width: 50px;
+            animation: battle_city 5s linear 5s infinite alternate;
+        }
+
+        @keyframes battle_city {
+            0% {
+                left: 0;
+                top: 0;
+            }
+
+
+            50% {
+                left: 90%;
+                top: 0;
+                border-radius: 50%;
+                background-color: #000;
+            }
+
+
+            100% {
+                left: 0;
+                top: 0;
+            }
+        }
+    </style>
 </head>
 
 <body>
     <nav>
         <ul id="menuLink">
-            <li><a href="#" id="menu"><strong>&equiv; Menu</strong></a></li>
-            <li><a href="../index.html">&nbsp;&nbsp;&nbsp;Home</a></li>
-            <li><a href="../w1/index.html">&nbsp;&nbsp;&nbsp;Week 1</a></li>
-            <li><a href="../w2/index.html">&nbsp;&nbsp;&nbsp;Week 2</a></li>
-            <li><a href="../w3/index.html">&nbsp;&nbsp;&nbsp;Week 3</a></li>
-            <li><a href="../w4/index.html">&nbsp;&nbsp;&nbsp;Week 4</a></li>
-            <li><a href="../w5/">&nbsp;&nbsp;&nbsp;Week 5</a></li>
-            <li><a href="../w6/">&nbsp;&nbsp;&nbsp;Challenge One: ToDo</a></li>
-            <li><a href="../w7/">&nbsp;&nbsp;&nbsp;Week 7</a></li>
-            <li><a href="../w8/">&nbsp;&nbsp;&nbsp;Week 8</a></li>
+            <li>
+                <a href="#" id="menu">
+                    <strong>&equiv; Menu</strong>
+                </a>
+            </li>
+            <li>
+                <a href="../index.html">&nbsp;&nbsp;&nbsp;Home</a>
+            </li>
+            <li>
+                <a href="../w1/index.html">&nbsp;&nbsp;&nbsp;Week 1</a>
+            </li>
+            <li>
+                <a href="../w2/index.html">&nbsp;&nbsp;&nbsp;Week 2</a>
+            </li>
+            <li>
+                <a href="../w3/index.html">&nbsp;&nbsp;&nbsp;Week 3</a>
+            </li>
+            <li>
+                <a href="../w4/index.html">&nbsp;&nbsp;&nbsp;Week 4</a>
+            </li>
+            <li>
+                <a href="../w5/">&nbsp;&nbsp;&nbsp;Week 5</a>
+            </li>
+            <li>
+                <a href="../w6/">&nbsp;&nbsp;&nbsp;Challenge One: ToDo</a>
+            </li>
+            <li>
+                <a href="../w7/">&nbsp;&nbsp;&nbsp;Week 7</a>
+            </li>
+            <li>
+                <a href="../w8/">&nbsp;&nbsp;&nbsp;Week 8</a>
+            </li>
         </ul>
     </nav>
     <header></header>
     <main>
         <section>
             <h1>CSS3 Transforms and Transitions</h1>
-            <p>Lets you translate, rotate, scale, and/or skew any element on the page.</p>
+            <p>
+                Lets you translate, rotate, scale, and/or skew any element on the page.
+            </p>
             <article>
                 <h3>Translate</h3>
-                <p>We can manipulate the element's appearance using transform functions. The value of the transform
+                <p>
+                    We can manipulate the element's appearance using transform functions. The value of the transform
                     property is one or more transform functions (separated by spaces) that will be applied in the order
-                    they're provided.</p>
+                    they're provided.
+                </p>
                 <figure>
                     <pre>
                         <code>
@@ -41,27 +132,35 @@
 transform: translate(45px, -45px);
 
 >> move element vertically
-transform: translateX(45px);
+transform: translatex(45px);
 
 >> move element horizontally
-transform: translateY(-30px);
+transform: translatey(-30px);
                         </code>
                     </pre>
                 </figure>
+                <h3>Sample Translate</h3>
+                <div id="translate" class="base"><span>Hover Me Translate!</span></div>
                 <h3>Scaling</h3>
-                <p>Scales an element by the defined factors horizontally then vertically.</p>
+                <p>
+                    Scales an element by the defined factors horizontally then vertically.
+                </p>
                 <figure>
                     <pre>
                             <code>
->> Providing different values will distort an element.
->> scale also use the scaleX(x) or scaleY(y) functions.                                
+>> providing different values will distort an element.
+>> scale also use the scalex(x) or scaley(y) functions.                                
 transform: scale(1.5, 0.25);                             
                             </code>
                         </pre>
                 </figure>
+                <h3>Sample Scale</h3>
+                <div id="scale" class="base"><span>Hover Me Scale!</span></div>
                 <h3>Rotation</h3>
-                <p>The rotate() function rotates an element around the point of origin by a specified angle value.
-                    Default point of origin is the element's center.</p>
+                <p>
+                    The rotate() function rotates an element around the point of origin by a specified angle value.
+                    Default point of origin is the element's center.
+                </p>
                 <figure>
                     <pre>
                                 <code>
@@ -70,17 +169,52 @@ transform: rotate(10deg);
                                 </code>
                             </pre>
                 </figure>
+                <h3>Sample Rotate</h3>
+                <div id="rotate" class="base"><span>Hover Me Rotate!</span></div>
                 <h3>Skew</h3>
-                <!--<figure>
+                <p>The skew(x,y) function specifies a skew along x and y axes.</p>
+                <figure>
                     <pre>
                         <code>
+transform: skew(15deg, 4deg);
                         </code>
                     </pre>
-                </figure>-->
+                </figure>
+                <h3>Sample Skew</h3>
+                <div id="skew" class="base"><span>Hover Me Skew!</span></div>
+
+                <h3>Transitions</h3>
+                <p>Allows the values of CSS properties to change over time, essentially providing simple animations</p>
+                <!--<figure> <pre> <code> </code> </pre> </figure>-->
             </article>
             <article>
+                <figure>
+                    <pre>
+                    <code>
+element {
+    transition-property: transform;
+    transition-duration: 0.2s;
+    transition-timing-function: ease-out;
+    transition-delay: 50ms;
+}
+
+>> short hand
+element {
+    transition: transform 0.2s ease-out 50ms;
+}
+                    </code>
+                </pre>
+                </figure>
+                <h3>Sample Transition</h3>
+                <div id="transition" class="base"><span>Transition</span></div>
+                <h3>Animation</h3>
+                <h3>Sample Animation</h3>
+                <div class="animation"></div>
                 <h3>Team Activity: Star Wars API</h3>
-                <p><a href="team_activity/index.html" class="minimal-margin-padding">Go to Sample Code</a></p>
+                <p>
+                    <a href="team_activity/index.html" class="minimal-margin-padding">Go to Sample Code</a>
+                </p>
+                <!--<figure> <pre> <code> </code> </pre> </figure>-->
             </article>
         </section>
     </main>
@@ -88,6 +222,7 @@ transform: rotate(10deg);
         &copy; 2020 | Portfolio | Sumilang Plucena
     </footer>
     <script src="../static/js/toggleMenu.js"></script>
+    <script src="transform_transition.js"></script>
 </body>
 
 </html>
