--- a/w7/index.html
+++ b/w7/index.html
@@ -22,6 +22,7 @@
       <li><a href="../w6/">&nbsp;&nbsp;&nbsp;Challenge One: ToDo</a></li>
       <li><a href="../w7/">&nbsp;&nbsp;&nbsp;Week 7</a></li>
       <li><a href="../w8/">&nbsp;&nbsp;&nbsp;Week 8</a></li>
+      <li><a href="../w9/">&nbsp;&nbsp;&nbsp;Week 9</a></li>
     </ul>
   </nav>
   <header></header>
