--- a/w8/index.html
+++ b/w8/index.html
@@ -109,6 +109,7 @@
             <li>
                 <a href="../w8/">&nbsp;&nbsp;&nbsp;Week 8</a>
             </li>
+            <li><a href="../w9/">&nbsp;&nbsp;&nbsp;Week 9</a></li>
         </ul>
     </nav>
     <header></header>
