--- a/w6/index.html
+++ b/w6/index.html
@@ -41,6 +41,7 @@
       </li>
       <li><a href="../w7/">&nbsp;&nbsp;&nbsp;Week 7</a></li>
       <li><a href="../w8/">&nbsp;&nbsp;&nbsp;Week 8</a></li>
+      <li><a href="../w9/">&nbsp;&nbsp;&nbsp;Week 9</a></li>
     </ul>
   </nav>
   <main>
