Updated team activity link

--- a/w9/index.html
+++ b/w9/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="../static/css/style.css">
-  <title>Week 7 | Notes</title>
+  <title>Week 9 | Notes</title>
 </head>
 
 <body>
@@ -423,7 +423,7 @@ const worker = new Worker('task.js');
                 </figure>-->
       </article>
       <article>
-        <h3>Team Activity: Hikes with Comments</h3>
+        <h3>Team Activity: DrumKit</h3>
         <p><a href="team_activity/index-START.html" class="minimal-margin-padding">Go to Sample Code</a></p>
       </article>
     </section>
