--- a/w10/quakes_near_me/index.html
+++ b/w10/quakes_near_me/index.html
@@ -5,9 +5,16 @@
     <meta charset="utf-8" />
     <title>Local Quakes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="../../static/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="../index.html">&lt;&lt; Go Back</a></li>
+        </ul>
+    </nav>
     <main>
         <h1>Quake List</h1>
         <ul id="quakeList"></ul>
