--- a/w10/index.html
+++ b/w10/index.html
@@ -130,6 +130,10 @@
         <!--<figure> <pre> <code> </code> </pre> </figure>-->
       </article>
       <article>
+        <h3>JavaScript Fetch Example</h3>
+        <p>
+          <a href="playground/" class="minimal-margin-padding">Go to Sample Code</a>
+        </p>
         <h3>Team Activity: DrumKit</h3>
         <p>
           <a href="team_activity/index.html" class="minimal-margin-padding">Go to Sample Code</a>
