--- a/w10/playground/index.html
+++ b/w10/playground/index.html
@@ -5,18 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Search Product</title>
+    <link rel="stylesheet" href="../../static/css/style.css">
 </head>
 
 <body>
-    <div>
-        <label for="search">Search</label>
-        <input type="text" id="search">
-    </div>
-    <div>
-        <ul id="list"></ul>
-    </div>
-    <script src="test.js" type="module"></script>
+    <nav>
+        <ul>
+            <li><a href="../index.html">&lt;&lt; Go Back</a></li>
+        </ul>
+    </nav>
+    <main>
+        <div>
+            <h3>Search Food Product</h3>
+            <label for="search">Search</label>
+            <input type="text" id="search">
+        </div>
+        <div>
+            <ul id="list"></ul>
+        </div>
+    </main>
+    <script src="app.js" type="module"></script>
 </body>
 
 </html>
