--- a/w8/index.html
+++ b/w8/index.html
@@ -110,6 +110,7 @@
                 <a href="../w8/">&nbsp;&nbsp;&nbsp;Week 8</a>
             </li>
             <li><a href="../w9/">&nbsp;&nbsp;&nbsp;Week 9</a></li>
+            <li><a href="../w10/">&nbsp;&nbsp;&nbsp;Week 10</a></li>
         </ul>
     </nav>
     <header></header>
