Started final project

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script>
+    <!--<script>
         // c92bf6840af98c5ff8ae08d8dd1857b1
         const url = "https://www.googleapis.com/books/v1/volumes/1";
         fetch(url)
@@ -20,7 +20,11 @@
             .catch(function (error) {
                 console.log(error);
             });
-    </script>
+    </script>-->
+    <main>
+        <ul id="product-list"></ul>
+    </main>
+    <script src="static/js/app.js" type="module"></script>
 </body>
 
 </html>
