--- a/final_project/index.html
+++ b/final_project/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="static/css/styles.css">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
             });
     </script>-->
     <main>
-        <ul id="product-list"></ul>
+        <ul id="product-list" class="product-list"></ul>
     </main>
     <script src="static/js/app.js" type="module"></script>
 </body>
