--- a/final_project/index.html
+++ b/final_project/index.html
@@ -22,9 +22,27 @@
                 console.log(error);
             });
     </script>-->
+    <header>
+        <nav>
+            <div class="menu-icon" id="menu-icon" onclick="toggleNav()"><span></span></div>
+            <div class="sidebar" id="sidebar">
+                <ul>
+                    <li>One</li>
+                    <li>Two</li>
+                    <li>Three</li>
+                    <li>Four</li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <br>
     <main>
         <ul id="product-list" class="product-list"></ul>
     </main>
+    <footer>
+        &copy; 2020 |Final Project | Sumilang Plucena
+    </footer>
+    <script src="static/js/toggle.js"></script>
     <script src="static/js/app.js" type="module"></script>
 </body>
 
