--- a/final_project/index.html
+++ b/final_project/index.html
@@ -35,8 +35,8 @@
             </div>
         </nav>
     </header>
-    <br>
     <main>
+        <h1>Select Item</h1>
         <ul id="product-list" class="product-list"></ul>
     </main>
     <footer>
