added search result

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -29,8 +29,8 @@
     <br>
     <main>
       <div class="search">
-        <input type="text" name="search"/>
-        <button></button>
+        <input type="text" id="searchTerm" required="required"/>
+        <button id="searchButton"></button>
       </div>
       <h1>Select Item</h1>
       <ul id="product-list" class="product-list"></ul>
