added cart icon in navigation

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -22,6 +22,10 @@
           <li id="view-products">View Products</li>
         </ul>
       </div>
+      <div class="cart">
+        <div class="cart-count">&nbsp;</div>
+        <div class="cart-icon"> <img src="static/img/cart.png" alt="Cart"></span></div>
+      </div>
     </nav>
   </header>
   <br>
