--- a/final_project/index.html
+++ b/final_project/index.html
@@ -32,7 +32,7 @@
   <main>
     <div class="search">
       <input type="text" id="searchTerm" required="required" />
-      <button id="searchButton"></button>
+      <button id="searchButton" class="button-search"></button>
     </div>
     <h1>Select Item</h1>
     <ul id="product-list" class="product-list"></ul>
