Added sidebar content

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -23,8 +23,9 @@
         </ul>
       </div>-->
       <div>Cart | Products</div>
-      <div id="quickview" class="quickview close">
-        <ul id="product-detail"></ul>
+      <div id="quickview" class="quickview">
+        <!--<div class="close"></div>
+        <ul id="product-detail" class="product-detail"></ul>-->
       </div>
       <div class="cart">
         <div class="cart-count">&nbsp;</div>
