--- a/final_project/index.html
+++ b/final_project/index.html
@@ -22,7 +22,13 @@
           <li id="view-products">View Products</li>
         </ul>
       </div>-->
-      <div>Cart | Products</div>
+      <div id="main-menu" class="main-menu">
+        <ul id="main-menu-list" class="main-menu-list">
+          <li>Products</li>
+          <li>|</li>
+          <li>Cart</li>
+        </ul>
+      </div>
       <div id="quickview" class="quickview">
         <!--<div class="close"></div>
         <ul id="product-detail" class="product-detail"></ul>-->
