--- a/final_project/index.html
+++ b/final_project/index.html
@@ -24,9 +24,9 @@
       </div>-->
       <div id="main-menu" class="main-menu">
         <ul id="main-menu-list" class="main-menu-list">
-          <li>Products</li>
+          <li id="view-products">Products</li>
           <li>|</li>
-          <li>Cart</li>
+          <li id="view-cart">Cart</li>
         </ul>
       </div>
       <div id="quickview" class="quickview">
