Updated cart view

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -26,7 +26,7 @@
         <ul id="main-menu-list" class="main-menu-list">
           <li id="view-products">Products</li>
           <li>|</li>
-          <li id="view-cart">Cart</li>
+          <li id="view-cart">Manage Cart</li>
         </ul>
       </div>
       <div id="quickview" class="quickview">
