--- a/final_project/index.html
+++ b/final_project/index.html
@@ -13,25 +13,16 @@
   <!--<script> // c92bf6840af98c5ff8ae08d8dd1857b1 const url = "https://www.googleapis.com/books/v1/volumes/1"; fetch(url) .then(resp => resp.json()) .then(function (data) { console.log(data); }) .catch(function (error) { console.log(error); }); </script>-->
   <header>
     <nav>
-      <!--<div class="menu-icon" id="menu-icon" onclick="toggleNav()">
-        <span></span>
-      </div>
-      <div class="sidebar" id="sidebar">
-        <ul id="product-detail">
-          <li id="view-cart">View Cart</li>
-          <li id="view-products">View Products</li>
-        </ul>
-      </div>-->
       <div id="main-menu" class="main-menu">
         <ul id="main-menu-list" class="main-menu-list">
           <li id="view-products">Products</li>
           <li>|</li>
           <li id="view-cart">Manage Cart</li>
+          <li>|</li>
+          <li id="view-resources">Resources</li>
         </ul>
       </div>
       <div id="quickview" class="quickview">
-        <!--<div class="close"></div>
-        <ul id="product-detail" class="product-detail"></ul>-->
       </div>
       <div class="cart">
         <div class="cart-count">&nbsp;</div>
