--- a/final_project/index.html
+++ b/final_project/index.html
@@ -16,10 +16,8 @@
       <div id="main-menu" class="main-menu">
         <ul id="main-menu-list" class="main-menu-list">
           <li id="view-products">Products</li>
-          <li>|</li>
+          <li> | </li>
           <li id="view-cart">Manage Cart</li>
-          <li>|</li>
-          <li id="view-resources">Resources</li>
         </ul>
       </div>
       <div id="quickview" class="quickview">
@@ -40,7 +38,7 @@
     <ul id="product-list" class="product-list"></ul>
   </main>
   <footer>
-    &copy; 2020 |Final Project | Sumilang Plucena
+    &copy; 2020 | WDD330: Final Project | Sumilang Plucena | <span id="view-resources">Resources</span>
   </footer>
   <script src="static/js/toggle.js"></script>
   <script src="static/js/app.js" type="module"></script>
