--- a/w10/index.html
+++ b/w10/index.html
@@ -50,6 +50,7 @@
       <li>
         <a href="../w10/">&nbsp;&nbsp;&nbsp;Week 10</a>
       </li>
+      <li><a href="../w14/">&nbsp;&nbsp;&nbsp;Final Project</a></li>
     </ul>
   </nav>
   <header></header>
