--- a/w14/final_project/index.html
+++ b/w14/final_project/index.html
@@ -10,11 +10,12 @@
 </head>
 
 <body>
-  <!--<script> // c92bf6840af98c5ff8ae08d8dd1857b1 const url = "https://www.googleapis.com/books/v1/volumes/1"; fetch(url) .then(resp => resp.json()) .then(function (data) { console.log(data); }) .catch(function (error) { console.log(error); }); </script>-->
   <header>
     <nav>
       <div id="main-menu" class="main-menu">
         <ul id="main-menu-list" class="main-menu-list">
+          <li><a href="../index.html" class="go-back">&lt;&lt; Go Back</a></li>
+          <li> | </li>
           <li id="view-products">Products</li>
           <li> | </li>
           <li id="view-cart">Manage Cart</li>
