--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li><a href="w8">&nbsp;&nbsp;&nbsp;Week 8</a></li>
             <li><a href="w9">&nbsp;&nbsp;&nbsp;Week 9</a></li>
             <li><a href="w10">&nbsp;&nbsp;&nbsp;Week 10</a></li>
+            <li><a href="../w14/">&nbsp;&nbsp;&nbsp;Final Project</a></li>
         </ul>
     </nav>
     <header></header>
