--- a/w8/index.html
+++ b/w8/index.html
@@ -111,6 +111,7 @@
             </li>
             <li><a href="../w9/">&nbsp;&nbsp;&nbsp;Week 9</a></li>
             <li><a href="../w10/">&nbsp;&nbsp;&nbsp;Week 10</a></li>
+            <li><a href="../w14/">&nbsp;&nbsp;&nbsp;Final Project</a></li>
         </ul>
     </nav>
     <header></header>
